--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
     "name": "torneoencasa",
     "version": "1.0.0",
     "dependencies": {
+        "highlight.js": "9.18.1",
         "react": "16.13.0",
-        "react-dom": "16.13.0"
+        "react-dom": "16.13.0",
+        "react-highlight.js": "1.0.7"
     },
     "devDependencies": {
         "xmlhttprequest": "1.8.0"
